[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csify"
version = "1.0.6"
authors = [
    { name = "Bryan Gregorius", email = "contact@selubi.tech" },
]
description = "Generate code-switched texts from monolingual texts"
readme = "README.md"
requires-python = ">=3.7"
license-files = { paths = ["LICENSE"] }
keywords = ["code-switching", "corpus generation", "natural language processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Japanese",
]
dependencies = ["spacy"]

[project.urls]
"Source Code" = "https://github.com/Selubi/CSify"
"Bug Tracker" = "https://github.com/Selubi/CSify/issues"